completed teams page with content

--- a/pages/teams/teams.html
+++ b/pages/teams/teams.html
@@ -36,44 +36,44 @@
 						 <!-- CSKO -->
 						<section class="player-gallery">
 						<div class="player-card">
-							<img src="../../images/hráč01.png" alt="Jindřich Chyba">
+							<img src="../../images/dejví.png" alt="David Horák">
 							<div class="overlay">
-							<h3>Jindřich Chyba</h3>
-							<p>ZEDKO</p>
+							<h3>David Horák</h3>
+							<p>Dejví</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="../../images/hráč02.png" alt="Sebastian Daňo">
+							<img src="../../images/domi.png" alt="Dominik Lopauer">
 							<div class="overlay">
-							<h3>Sebastian Daňo</h3>
-							<p>beastik</p>
+							<h3>Dominik Lopauer</h3>
+							<p>D0M1</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="../../images/hráč03.png" alt="Lukáš Šebek">
+							<img src="../../images/maca.png" alt="Robin Macek">
 							<div class="overlay">
-							<h3>Lukáš Šebek</h3>
-							<p>luky</p>
+							<h3>kapitán Robin Macek</h3>
+							<p>maca</p>
 						</div>
 						</div>
 						<div class="player-card">
-							<img src="../../images/hráč04.png" alt="Lukáš Šebek">
+							<img src="../../images/faqazy.png" alt="Nikita Yevstihnieiev">
 							<div class="overlay">
-							<h3>Lukáš Šebek</h3>
-							<p>luky</p>
+							<h3>Nikita Yevstihnieiev</h3>
+							<p>faqazy</p>
 						</div>
 						</div>
 						<div class="player-card">
-							<img src="../../images/unknown.png" alt="Lukáš Šebek">
+							<img src="../../images/unknown.png" alt="unknown">
 							<div class="overlay">
-							<h3>Lukáš Šebek</h3>
-							<p>luky</p>
+							<h3>..zde můžeš být ty...</h3>
+							<p>...koukni na náš discord...</p>
 						</div>
 						</div>
 						</section>
 							<div class="game-csko">
 							<img src="../../images/cs2.png" alt="Game Logo">
-							</div>
+						</div>
 							
 						<br>
 						<br>
@@ -84,38 +84,38 @@
 						<div class="container"></div>
 						<section class="player-gallery">
 						<div class="player-card">
-							<img src="../../images/hráč01.png" alt="Jindřich Chyba">
+							<img src="../../images/kkeo.png" alt="Julián Kincl">
 							<div class="overlay">
-							<h3>Jindřich Chyba</h3>
-							<p>ZEDKO</p>
+							<h3>Julián Kincl</h3>
+							<p>kKeo</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="../../images/hráč02.png" alt="Sebastian Daňo">
+							<img src="../../images/unknown.png" alt="unknown">
 							<div class="overlay">
-							<h3>Sebastian Daňo</h3>
-							<p>beastik</p>
-							</div>
-						</div>
-						<div class="player-card">
-							<img src="../../images/hráč03.png" alt="Lukáš Šebek">
-							<div class="overlay">
-							<h3>Lukáš Šebek</h3>
-							<p>luky</p>
+							<h3>..zde můžeš být ty...</h3>
+							<p>...koukni na náš discord...</p>
 						</div>
 						</div>
 						<div class="player-card">
-							<img src="../../images/hráč04.png" alt="Lukáš Šebek">
+							<img src="../../images/hajný.png" alt="adek Kromsián">
 							<div class="overlay">
-							<h3>Lukáš Šebek</h3>
-							<p>luky</p>
+							<h3>Radek Kromsián</h3>
+							<p>HajnýJeLesaPán</p>
 						</div>
 						</div>
 						<div class="player-card">
-							<img src="../../images/unknown.png" alt="Lukáš Šebek">
+							<img src="../../images/unknown.png" alt="unknown">
 							<div class="overlay">
-							<h3>Lukáš Šebek</h3>
-							<p>luky</p>
+							<h3>..zde můžeš být ty...</h3>
+							<p>...koukni na náš discord...</p>
+						</div>
+						</div>
+						<div class="player-card">
+							<img src="../../images/unknown.png" alt="unknown">
+							<div class="overlay">
+							<h3>..zde můžeš být ty...</h3>
+							<p>...koukni na náš discord...</p>
 						</div>
 						</div>
 						</div>
@@ -132,24 +132,24 @@
 						 <div class="container">
 						<section class="player-gallery">
 						<div class="player-card">
-							<img src="../../images/hráč01.png" alt="Jindřich Chyba">
+							<img src="../../images/kubas.png" alt="Jindřich Chyba">
 							<div class="overlay">
-							<h3>Jindřich Chyba</h3>
-							<p>ZEDKO</p>
+							<h3>Jakub Farkaš</h3>
+							<p>kubas</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="../../images/hráč02.png" alt="Sebastian Daňo">
+							<img src="../../images/judy.png" alt="Jan Judas">
 							<div class="overlay">
-							<h3>Sebastian Daňo</h3>
-							<p>beastik</p>
+							<h3>Jan Judas</h3>
+							<p>Judy</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="../../images/hráč03.png" alt="Lukáš Šebek">
+							<img src="../../images/zdeno.png" alt="unknown">
 							<div class="overlay">
-							<h3>Lukáš Šebek</h3>
-							<p>luky</p>
+							<h3>Zdeněk Pavlů</h3>
+							<p>meow</p>
 						</div>
 						</div>
 						</div>
