--- a/pages/achievements/achievements.html
+++ b/pages/achievements/achievements.html
@@ -44,28 +44,10 @@
       </nav>
     </header>
 
-
-  <body class="is-preload">
-    <div id="page-wrapper">
-      <!-- Header -->
-      <header id="header">
-        <h1 id="logo"><a href="../../index.html">UPCE Esports</a></h1>
-        <nav id="nav">
-          <ul>
-            <li><a href="../../index.html">Hlavní stránka</a></li>
-            <li><a href="../teams/teams.html">Týmy</a></li>
-            <li><a href="../achievements/achievements.html">Úspěchy</a></li>
-            <li>
-              <a
-                href="https://discord.gg/NmzvWFH"
-                class="button primary"
-                target="_blank"
-                >Připojte se k nám!</a
-              >
-            </li>
-          </ul>
-        </nav>
-      </header>
+    <div class="head-logo">
+      <img src="../../images/logo.png" alt="UPCE Esports Logo"/>
+      <h1>Naše Úspěchy</h1>
+    </div>
 
       <!-- Cards 2025 / First-card -->
       <div id="main" class="wrapper style1">
