- changed text on the main page - tried creating contact list but failed

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="index.html">Hlavní stránka</a></li>
             <li><a href="pages/teams/teams.html">Týmy</a></li>
             <li><a href="pages/achievements/achievements.html">Úspěchy</a></li>
+            <li><a href="pages/events/events.html">Kalendář akcí</a></li>            
             <li>
               <a
                 href="https://discord.gg/NmzvWFH"
@@ -67,25 +68,23 @@
                 <header>
                   <h2>Nejsme jen pro profíky.</h2>
                   <p>
-                    Do spolku zveme každého milovníka her, ať už od retro po
-                    nejnovější tituly.
+                    Do spolku zveme každého milovníka her, ať už hraješ cokoliv a na jakékoliv úrovni!
                   </p>
                 </header>
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Naše esportová komunita spojuje studenty s vášní pro
-                  kompetitivní hraní. Účastníme se turnajů v populárních hrách
-                  jako CS2, League of Legends a Rocket League. Každý člen má
-                  možnost rozvíjet své dovednosti a reprezentovat univerzitu na
-                  vysoké úrovni.
+                  Naše esportová komunita spojuje studenty s vášní pro hraní her,
+                  ať už míříš na vrchol nebo hraješ pro zábavu. Naši nejlepší hráči se účastní turnajů
+                  v populárních hrách jako CS2, League of Legends a Rocket League. Každý člen má možnost rozvíjet
+                  své dovednosti a reprezentovat univerzitu na vysoké úrovni.
                 </p>
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Pravidelně pořádáme akce také i pro ostatní studenty, jako
-                  jsou například LAN párty, hospodské kvízy s herní tématikou,
-                  nebo jsme také k zastihnutí na akcích Univerzity Pardubice.
+                  Pravidelně pořádáme akce s herní tématikou, nejen pro naše členy,
+                  ale i pro ostatní studenty. Mezi ně patří například LAN párty,
+                  hospodské kvízy a účastníme se i univerzitních akcí jako Příliv.
                 </p>
               </div>
             </div>
@@ -101,13 +100,14 @@
         /></span>
         <div class="content">
           <header>
-            <h2>Reprezentujeme Univerzitu Pardubice</h2>
-            <p>na národních a mezinárodních akademických ligách</p>
+            <h2>Reprezentujeme Univerzitu Pardubice
+              na národních a mezinárodních akademických ligách
+            </h2>
           </header>
           <p>
-            Jakožto studentský spolek máme možnost reprezentovat naší univerzitu
-            v různých soutěžích a turnajích. Při dobrém umístění jsou následně
-            reprezentanti odměněni sportovními stipendii.
+            Jako studentský spolek máme příležitost reprezentovat naší univerzitu
+            v různých prestižních soutěžích a turnajích. Úspěšní reprezentanti mohou být
+            za své výkony na těchto akcích oceněni stipendii.
           </p>
           <ul class="actions">
             <li>
@@ -129,7 +129,7 @@
             <!-- Left Column: Heading, Text, Button -->
             <div class="col-7 col-12-medium">
               <header>
-                <h2>Nesedíme jenom za počitačema</h2>
+                <h2>Nesedíme jenom za počítačema</h2>
                 <p>Zapojujeme se i do aktivit v rámci univerzity</p>
               </header>
               <p>
@@ -201,6 +201,7 @@
         <ul class="copyright">
           <li>&copy; UPCE Esports. All rights reserved.</li>
           <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          <li><a href="https://www.upce.cz/" target="_blank"><img src="images/upce_logo.png"></a></li>
         </ul>
       </footer>
     </div>
