- created an event page, waiting for Judy to decide on visuals

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
               Spojujeme hráče. Budujeme týmy. Soutěžíme naplno.<br />
               Přidej se a buď součástí univerzitní herní revoluce.
             </p>
+            <br>
+            <a href="https://www.upce.cz" target="_blank"><img src="images/upce_logo.png"></a>
           </header>
           <span class="image"><img src="images/kůň.png" alt="" /></span>
         </div>
