--- a/pages/teams/teams.html
+++ b/pages/teams/teams.html
@@ -25,6 +25,7 @@
 						<li><a href="../../index.html">Hlavní stránka</a></li>
 						<li><a href="../teams/teams.html">Týmy</a></li>
 						<li><a href="../achievements/achievements.html">Úspěchy</a></li>
+						<li><a href="../events/events.html">Kalendář akcí</a></li>     
 						<li>
 							<a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
 						</li>
