- added team leaders into the teams.html

--- a/pages/teams/teams.html
+++ b/pages/teams/teams.html
@@ -34,6 +34,35 @@
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
+						<!-- Team Leaders -->
+						<section class="player-gallery">
+						<div class="player-card">
+							<img src="../../images/judy.png" alt="Jan Judas">
+							<div class="overlay">
+							<h3>Jan Judas</h3>
+							<p>Judy</p>
+							</div>
+						</div>
+						<div class="player-card">
+							<img src="../../images/rollaz.png" alt="Radek Plžík">
+							<div class="overlay">
+							<h3>Radek Plžík</h3>
+							<p>Rollaz</p>
+							</div>
+						</div>
+						</section>
+							<div class="game-upce">
+							<img src="../../images/logo.png" alt="Game Logo">
+							<h2>Vedení spolku</h2>
+						</div>
+							
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
+						<br>
 						 <!-- CSKO -->
 						<section class="player-gallery">
 						<div class="player-card">
