- redesigned teams page

--- a/index.html
+++ b/index.html
@@ -164,46 +164,18 @@
       </section>
 
       <!-- Footer -->
-      <footer id="footer">
-        <ul class="icons">
-          <li>
-            <a
-              href="https://www.facebook.com/UPCEesports"
-              class="icon brands alt fa-facebook-f"
-              target="_blank"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://discord.gg/NmzvWFH"
-              class="icon brands alt fa-discord"
-              target="_blank"
-              ><span class="label">Discord</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/upceesports"
-              class="icon brands alt fa-instagram"
-              target="_blank"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="mailto:upceesports@gmail.com"
-              class="icon solid alt fa-envelope"
-              ><span class="label">Email</span></a
-            >
-          </li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; UPCE Esports. All rights reserved.</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-          <li><a href="https://www.upce.cz/" target="_blank"><img src="images/upce_logo.png"></a></li>
-        </ul>
-      </footer>
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="https://www.facebook.com/UPCEesports" class="icon brands alt fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+						<li><a href="https://discord.gg/NmzvWFH" class="icon brands alt fa-discord" target="_blank"><span class="label">Discord</span></a></li>
+						<li><a href="https://www.instagram.com/upceesports" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.twitch.tv/upceesports" class="icon brands alt fa-twitch" target="_blank"><span class="label">Twitch</span></a></li>
+						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
     </div>
 
     <!-- Scripts -->
