--- a/pages/teams/teams.html
+++ b/pages/teams/teams.html
@@ -32,170 +32,170 @@
 				</nav>
 			</header>
 			<!-- Main -->
-				<div id="main" class="wrapper style1">
-					<div class="container">
-						<!-- Team Leaders -->
-						<section class="player-gallery">
+			<div id="main" class="wrapper style1">
+				<div class="container">
+					<!-- Team Leaders -->
+					<div class="game-upce">
+						<img src="../../images/logo.png" alt="Game Logo">
+						<h2>Vedení spolku</h2>
+					</div>
+					<section class="player-gallery">
 						<div class="player-card">
 							<img src="../../images/judy.png" alt="Jan Judas">
 							<div class="overlay">
-							<h3>Jan Judas</h3>
-							<p>Judy</p>
+								<h3>Jan Judas</h3>
+								<p>Judy</p>
 							</div>
 						</div>
 						<div class="player-card">
 							<img src="../../images/rollaz.png" alt="Radek Plžík">
 							<div class="overlay">
-							<h3>Radek Plžík</h3>
-							<p>Rollaz</p>
+								<h3>Radek Plžík</h3>
+								<p>Rollaz</p>
 							</div>
 						</div>
-						</section>
-							<div class="game-upce">
-							<img src="../../images/logo.png" alt="Game Logo">
-							<h2>Vedení spolku</h2>
-						</div>
-							
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						 <!-- CSKO -->
-						<section class="player-gallery">
+					</section>
+			
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<!-- CSKO -->
+					<div class="game-csko">
+						<img src="../../images/cs2.png" alt="Game Logo">
+					</div>
+					<section class="player-gallery">
 						<div class="player-card">
 							<img src="../../images/dejví.png" alt="David Horák">
 							<div class="overlay">
-							<h3>David Horák</h3>
-							<p>Dejví</p>
+								<h3>David Horák</h3>
+								<p>Dejví</p>
 							</div>
 						</div>
 						<div class="player-card">
 							<img src="../../images/domi.png" alt="Dominik Lopauer">
 							<div class="overlay">
-							<h3>Dominik Lopauer</h3>
-							<p>D0M1</p>
+								<h3>Dominik Lopauer</h3>
+								<p>D0M1</p>
 							</div>
 						</div>
 						<div class="player-card">
 							<img src="../../images/maca.png" alt="Robin Macek">
 							<div class="overlay">
-							<h3>kapitán Robin Macek</h3>
-							<p>maca</p>
-						</div>
+								<h3>kapitán Robin Macek</h3>
+								<p>maca</p>
+							</div>
 						</div>
 						<div class="player-card">
 							<img src="../../images/faqazy.png" alt="Nikita Yevstihnieiev">
 							<div class="overlay">
-							<h3>Nikita Yevstihnieiev</h3>
-							<p>faqazy</p>
-						</div>
-						</div>
-						<div class="player-card">
-							<img src="../../images/unknown.png" alt="unknown">
-							<div class="overlay">
-							<h3>..zde můžeš být ty...</h3>
-							<p>...koukni na náš discord...</p>
-						</div>
-						</div>
-						</section>
-							<div class="game-csko">
-							<img src="../../images/cs2.png" alt="Game Logo">
-						</div>
-							
-						<br>
-						<br>
-						<br>
-
-
-						<!-- LOLKO -->
-						<div class="container"></div>
-						<section class="player-gallery">
-						<div class="player-card">
-							<img src="../../images/kkeo.png" alt="Julián Kincl">
-							<div class="overlay">
-							<h3>Julián Kincl</h3>
-							<p>kKeo</p>
+								<h3>Nikita Yevstihnieiev</h3>
+								<p>faqazy</p>
 							</div>
 						</div>
 						<div class="player-card">
 							<img src="../../images/unknown.png" alt="unknown">
 							<div class="overlay">
-							<h3>..zde můžeš být ty...</h3>
-							<p>...koukni na náš discord...</p>
+								<h3>..zde můžeš být ty...</h3>
+								<p>...koukni na náš discord...</p>
+							</div>
 						</div>
+					</section>
+			
+					<br>
+					<br>
+					<br>
+			
+			
+					<!-- LOLKO -->
+					<div class="game-lolko">
+						<img src="../../images/lolko.png" alt="Game Logo">
+					</div>
+					<section class="player-gallery">
+						<div class="player-card">
+							<img src="../../images/kkeo.png" alt="Julián Kincl">
+							<div class="overlay">
+								<h3>Julián Kincl</h3>
+								<p>kKeo</p>
+							</div>
+						</div>
+						<div class="player-card">
+							<img src="../../images/unknown.png" alt="unknown">
+							<div class="overlay">
+								<h3>..zde můžeš být ty...</h3>
+								<p>...koukni na náš discord...</p>
+							</div>
 						</div>
 						<div class="player-card">
 							<img src="../../images/hajný.png" alt="adek Kromsián">
 							<div class="overlay">
-							<h3>Radek Kromsián</h3>
-							<p>HajnýJeLesaPán</p>
-						</div>
-						</div>
-						<div class="player-card">
-							<img src="../../images/unknown.png" alt="unknown">
-							<div class="overlay">
-							<h3>..zde můžeš být ty...</h3>
-							<p>...koukni na náš discord...</p>
-						</div>
+								<h3>Radek Kromsián</h3>
+								<p>HajnýJeLesaPán</p>
+							</div>
 						</div>
 						<div class="player-card">
 							<img src="../../images/unknown.png" alt="unknown">
 							<div class="overlay">
-							<h3>..zde můžeš být ty...</h3>
-							<p>...koukni na náš discord...</p>
+								<h3>..zde můžeš být ty...</h3>
+								<p>...koukni na náš discord...</p>
+							</div>
 						</div>
-						</div>
-						</div>
-						</section>
-
-					</div>
-					<div class="game-lolko">
-						<img src="../../images/lolko.png" alt="Game Logo">
-					</div>
-					<br>
-					<br>
-					<br>
-						<!-- ROCKET LEAGUE -->
-						 <div class="container">
-						<section class="player-gallery">
 						<div class="player-card">
-							<img src="../../images/kubas.png" alt="Jindřich Chyba">
+							<img src="../../images/unknown.png" alt="unknown">
 							<div class="overlay">
+								<h3>..zde můžeš být ty...</h3>
+								<p>...koukni na náš discord...</p>
+							</div>
+						</div>
+				</div>
+				</section>
+			
+			</div>
+			<br>
+			<br>
+			<br>
+			<!-- ROCKET LEAGUE -->
+			<div class="container">
+				<div class="game-rocket">
+					<img src="../../images/rocket.png" alt="Game Logo">
+				</div>
+				<section class="player-gallery">
+					<div class="player-card">
+						<img src="../../images/kubas.png" alt="Jindřich Chyba">
+						<div class="overlay">
 							<h3>Jakub Farkaš</h3>
 							<p>kubas</p>
-							</div>
 						</div>
-						<div class="player-card">
-							<img src="../../images/judy.png" alt="Jan Judas">
-							<div class="overlay">
+					</div>
+					<div class="player-card">
+						<img src="../../images/judy.png" alt="Jan Judas">
+						<div class="overlay">
 							<h3>Jan Judas</h3>
 							<p>Judy</p>
-							</div>
 						</div>
-						<div class="player-card">
-							<img src="../../images/zdeno.png" alt="unknown">
-							<div class="overlay">
+					</div>
+					<div class="player-card">
+						<img src="../../images/zdeno.png" alt="unknown">
+						<div class="overlay">
 							<h3>Zdeněk Pavlů</h3>
 							<p>meow</p>
 						</div>
-						</div>
-						</div>
-						</div>
-						</section>
-
 					</div>
-					<div class="game-rocket">
-						<img src="../../images/rocket.png" alt="Game Logo">
-					</div>
-					</div>
-					<br>
-					<br>
-					<br>
-
-				</div>
+			</div>
+			</div>
+			</section>
+			
+			</div>
+			
+			</div>
+			<br>
+			<br>
+			<br>
+			
+			</div>
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -203,6 +203,7 @@
 						<li><a href="https://www.facebook.com/UPCEesports" class="icon brands alt fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
 						<li><a href="https://discord.gg/NmzvWFH" class="icon brands alt fa-discord" target="_blank"><span class="label">Discord</span></a></li>
 						<li><a href="https://www.instagram.com/upceesports" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.twitch.tv/upceesports" class="icon brands alt fa-twitch" target="_blank"><span class="label">Twitch</span></a></li>
 						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
