- bugfixes of Week 3 07/2025

--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
             <li><a href="pages/achievements/achievements.html">Úspěchy</a></li>
             <li><a href="pages/events/events.html">Kalendář akcí</a></li>            
             <li>
-              <a
-                href="https://discord.gg/NmzvWFH"
-                class="button primary"
-                target="_blank"
-                >Připojte se k nám!</a
-              >
+              <a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
             </li>
           </ul>
         </nav>
@@ -131,13 +126,13 @@
             <!-- Left Column: Heading, Text, Button -->
             <div class="col-7 col-12-medium">
               <header>
-                <h2>Nesedíme jenom za počítačema</h2>
-                <p>Zapojujeme se i do aktivit v rámci univerzity</p>
+                <h2>Najdeš nás na Discordu</h2>
               </header>
               <p>
-                Spolupracujeme s univerzitou a dalšími studentskými spolky na
-                vytvoření záživného a přitažlivého prostředí pro zájemce o
-                studium na Univerzitě Pardubice.
+                Discord je hlavním centrem našeho spolku. Právě zde se potkávají naši členové,
+                domlouvají tréninky nebo sdílí novinky o spolku. Ať už jsi aktivní člen týmu
+                nebo jen hledáš partu na večerní hraní, náš Discord je místo, kde to žije.
+                Přidej se a buď v obraze!
               </p>
               <ul class="actions">
                 <li>
@@ -175,7 +170,7 @@
 						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="https://www.upce.cz" target="_blank"><img src="images/upce_logo.png"></a></li>
 					</ul>
 				</footer>
     </div>
