--- a/pages/achievements/achievements.html
+++ b/pages/achievements/achievements.html
@@ -47,7 +47,8 @@
 
     <div class="head-logo">
       <img src="../../images/logo.png" alt="UPCE Esports Logo"/>
-      <h1>Naše Úspěchy</h1>
+      <h1>Naše úspěchy</h1>
+      <p>*názvy turnajů odkazují na více informací</p>
     </div>
 
       <!-- Cards 2025 / First-card -->
@@ -221,7 +222,7 @@
 						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="https://www.upce.cz" target="_blank"><img src="../../images/upce_logo.png"></a></li>
 					</ul>
 				</footer>
     </div>
