--- a/pages/teams/teams.html
+++ b/pages/teams/teams.html
@@ -40,7 +40,7 @@
 						<img src="../../images/logo.png" alt="Game Logo">
 						<h2>Vedení spolku</h2>
 					</div>
-					<section class="player-gallery">
+					<section class="player-gallery-larger">
 						<div class="player-card">
 							<img src="../../images/judy.png" alt="Jan Judas">
 							<div class="overlay">
@@ -208,7 +208,7 @@
 						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="https://www.upce.cz" target="_blank"><img src="../../images/upce_logo.png"></a></li>
 					</ul>
 				</footer>
 
