Twitch Live Stream Tracker
Created a script which shows "online" image on main page when Twitch stream /upceesports is online.

Images are not yet created, test version attached

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
               Přidej se a buď součástí univerzitní herní revoluce.
             </p>
             <br>
-            <a href="https://www.upce.cz" target="_blank"><img src="images/upce_logo.png"></a>
+              <ul>
+                                <li><a id="twitch-link" href="https://twitch.tv/upceesports" target="_blank">
+                  <img id="twitch-logo" src="images/offline.png" alt="Twitch Logo" width="100">
+                </a></li>
+                <li><a href="https://www.upce.cz" target="_blank"><img src="images/upce_logo.png"></a></li>
+              </ul>
           </header>
           <span class="image"><img src="images/kůň.png" alt="" /></span>
         </div>
@@ -184,5 +189,6 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/twitch-stream-check.js"></script>
   </body>
 </html>
