Refactor footer styles and improve HTML structure for better readability

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
             <li><a href="index.html">Hlavní stránka</a></li>
             <li><a href="pages/teams/teams.html">Týmy</a></li>
             <li><a href="pages/achievements/achievements.html">Úspěchy</a></li>
-            <li><a href="pages/events/events.html">Kalendář akcí</a></li>            
+            <li><a href="pages/events/events.html">Kalendář akcí</a></li>
             <li>
-              <a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
+              <a
+                href="https://discord.gg/NmzvWFH"
+                class="button primary"
+                target="_blank"
+                >Připojte se k nám!</a
+              >
             </li>
           </ul>
         </nav>
@@ -45,8 +50,10 @@
               Spojujeme hráče. Budujeme týmy. Soutěžíme naplno.<br />
               Přidej se a buď součástí univerzitní herní revoluce.
             </p>
-            <br>
-            <a href="https://www.upce.cz" target="_blank"><img src="images/upce_logo.png"></a>
+            <br />
+            <a href="https://www.upce.cz" target="_blank"
+              ><img src="images/upce_logo.png"
+            /></a>
           </header>
           <span class="image"><img src="images/kůň.png" alt="" /></span>
         </div>
@@ -65,23 +72,27 @@
                 <header>
                   <h2>Nejsme jen pro profíky.</h2>
                   <p>
-                    Do spolku zveme každého milovníka her, ať už hraješ cokoliv a na jakékoliv úrovni!
+                    Do spolku zveme každého milovníka her, ať už hraješ cokoliv
+                    a na jakékoliv úrovni!
                   </p>
                 </header>
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Naše esportová komunita spojuje studenty s vášní pro hraní her,
-                  ať už míříš na vrchol nebo hraješ pro zábavu. Naši nejlepší hráči se účastní turnajů
-                  v populárních hrách jako CS2, League of Legends a Rocket League. Každý člen má možnost rozvíjet
-                  své dovednosti a reprezentovat univerzitu na vysoké úrovni.
+                  Naše esportová komunita spojuje studenty s vášní pro hraní
+                  her, ať už míříš na vrchol nebo hraješ pro zábavu. Naši
+                  nejlepší hráči se účastní turnajů v populárních hrách jako
+                  CS2, League of Legends a Rocket League. Každý člen má možnost
+                  rozvíjet své dovednosti a reprezentovat univerzitu na vysoké
+                  úrovni.
                 </p>
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Pravidelně pořádáme akce s herní tématikou, nejen pro naše členy,
-                  ale i pro ostatní studenty. Mezi ně patří například LAN párty,
-                  hospodské kvízy a účastníme se i univerzitních akcí jako Příliv.
+                  Pravidelně pořádáme akce s herní tématikou, nejen pro naše
+                  členy, ale i pro ostatní studenty. Mezi ně patří například LAN
+                  párty, hospodské kvízy a účastníme se i univerzitních akcí
+                  jako Příliv.
                 </p>
               </div>
             </div>
@@ -97,14 +108,16 @@
         /></span>
         <div class="content">
           <header>
-            <h2>Reprezentujeme Univerzitu Pardubice
-              na národních a mezinárodních akademických ligách
+            <h2>
+              Reprezentujeme Univerzitu Pardubice na národních a mezinárodních
+              akademických ligách
             </h2>
           </header>
           <p>
-            Jako studentský spolek máme příležitost reprezentovat naší univerzitu
-            v různých prestižních soutěžích a turnajích. Úspěšní reprezentanti mohou být
-            za své výkony na těchto akcích oceněni stipendii.
+            Jako studentský spolek máme příležitost reprezentovat naší
+            univerzitu v různých prestižních soutěžích a turnajích. Úspěšní
+            reprezentanti mohou být za své výkony na těchto akcích oceněni
+            stipendii.
           </p>
           <ul class="actions">
             <li>
@@ -129,18 +142,45 @@
                 <h2>Najdeš nás na Discordu</h2>
               </header>
               <p>
-                Discord je hlavním centrem našeho spolku. Právě zde se potkávají naši členové,
-                domlouvají tréninky nebo sdílí novinky o spolku. Ať už jsi aktivní člen týmu
-                nebo jen hledáš partu na večerní hraní, náš Discord je místo, kde to žije.
-                Přidej se a buď v obraze!
+                Discord je hlavním centrem našeho spolku. Právě zde se potkávají
+                naši členové, domlouvají tréninky nebo sdílí novinky o spolku.
+                Ať už jsi aktivní člen týmu nebo jen hledáš partu na večerní
+                hraní, náš Discord je místo, kde to žije. Přidej se a buď v
+                obraze!
               </p>
               <ul class="actions">
                 <li>
-                  <a href="https://discord.gg/NmzvWFH" class="button" target="_blank">
+                  <a
+                    href="https://discord.gg/NmzvWFH"
+                    class="button"
+                    target="_blank"
+                  >
                     Přidejte se k nám!
                   </a>
                 </li>
               </ul>
+              <div class="row">
+                <div class="col-12">
+                  <p>Máte dotaz? Kontaktujte nás:</p>
+                  <div class="contact-icons">
+                    <a
+                      href="https://discord.gg/user/typekA"
+                      target="_blank"
+                      class="icon-contact"
+                    >
+                      <i class="icon brands fa-discord"></i> Typek A
+                    </a>
+                    <span class="contact-divider">/</span>
+                    <a
+                      href="https://discord.gg/user/typekB"
+                      target="_blank"
+                      class="icon-contact"
+                    >
+                      <i class="icon brands fa-discord"></i> Typek B
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
 
             <!-- Right Column: Discord Widget -->
@@ -161,18 +201,58 @@
       </section>
 
       <!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="https://www.facebook.com/UPCEesports" class="icon brands alt fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
-						<li><a href="https://discord.gg/NmzvWFH" class="icon brands alt fa-discord" target="_blank"><span class="label">Discord</span></a></li>
-						<li><a href="https://www.instagram.com/upceesports" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.twitch.tv/upceesports" class="icon brands alt fa-twitch" target="_blank"><span class="label">Twitch</span></a></li>
-						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="https://www.upce.cz" target="_blank"><img src="images/upce_logo.png"></a></li>
-					</ul>
-				</footer>
+      <footer id="footer">
+        <ul class="icons">
+          <li>
+            <a
+              href="https://www.facebook.com/UPCEesports"
+              class="icon brands alt fa-facebook-f"
+              target="_blank"
+              ><span class="label">Facebook</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://discord.gg/NmzvWFH"
+              class="icon brands alt fa-discord"
+              target="_blank"
+              ><span class="label">Discord</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/upceesports"
+              class="icon brands alt fa-instagram"
+              target="_blank"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.twitch.tv/upceesports"
+              class="icon brands alt fa-twitch"
+              target="_blank"
+              ><span class="label">Twitch</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="mailto:upceesports@gmail.com"
+              class="icon solid alt fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+        <ul class="copyright">
+          <li>&copy; UPCE Esports. All rights reserved.</li>
+          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          <li>
+            <a href="https://www.upce.cz" target="_blank"
+              ><img src="images/upce_logo.png"
+            /></a>
+          </li>
+        </ul>
+      </footer>
     </div>
 
     <!-- Scripts -->
