--- a/index.html
+++ b/index.html
@@ -163,20 +163,11 @@
                 <div class="col-12">
                   <p>Máte dotaz? Kontaktujte nás:</p>
                   <div class="contact-icons">
-                    <a
-                      href="https://discord.gg/user/typekA"
-                      target="_blank"
-                      class="icon-contact"
-                    >
-                      <i class="icon brands fa-discord"></i> Typek A
+                    <a href="https://discord.gg/NmzvWFH" target="_blank" class="icon-contact">
+                      <img src="images/judy.png"> Judy
                     </a>
-                    <span class="contact-divider">/</span>
-                    <a
-                      href="https://discord.gg/user/typekB"
-                      target="_blank"
-                      class="icon-contact"
-                    >
-                      <i class="icon brands fa-discord"></i> Typek B
+                    <a href="https://discord.gg/NmzvWFH" target="_blank" class="icon-contact">
+                      <img src="images/rollaz.png"> Rollaz
                     </a>
                   </div>
                 </div>
