--- a/index.html
+++ b/index.html
@@ -52,29 +52,8 @@
             </p>
             <br />
             <ul>
-              <li>
-                <a
-                  id="twitch-link"
-                  href="https://twitch.tv/upceesports"
-                  target="_blank"
-                >
-                </a>
-                <div class="twitch-embed">
-                  <iframe
-                    src="https://player.twitch.tv/?channel=upceesports&parent=rollazino.github.io"
-                    height="300"
-                    width="400"
-                    allowfullscreen="true"
-                  >
-                  </iframe>
-                </div>
-                <!-- The offline message will be inserted by JavaScript -->
-              </li>
-              <li>
-                <a href="https://www.upce.cz" target="_blank"
-                  ><img src="images/upce_logo.png"
-                /></a>
-              </li>
+              <li><a href="https://www.twitch.tv/upceesports" target="_blank"><img src="images/offline.png" id="twitch-logo" style="width: 105px"></a></li>
+              <li><img src="images/upce_logo.png"></li>
             </ul>
           </header>
           <span class="image"><img src="images/kůň.png" alt="" /></span>
@@ -264,6 +243,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/twitch-stream-check.js"></script>
+    <script src="assets/js/twitch-stream-check.js"></script> 
+
   </body>
 </html>
